# tutorial_iros2018

./: CMakeLists.txt  README.md  package.xml
cartesio/: CMakeLists.txt
cartesio/controllers/: SimpleIkController.cpp  SimpleIkController.h  instructions.ipynb
cartesio/problems/: instructions.ipynb  reemc_simple_stack.yaml  valkyrie_simple_stack.yaml
configs/: iCub_example.yaml  instructions.ipynb  reemc_example.yaml
configs/iCub/joint_id_map/: iCub_joint_map.yaml
configs/iCub/xbotcore/: iCub_config.yaml
configs/reemc/joint_id_map/: reemc_joint_map.yaml
configs/reemc/xbotcore/: reemc_config.yaml
configs/valkyrie/joint_id_map/: valkyrie_joint_map.yaml
configs/valkyrie/xbotcore/: valkyrie_config.yaml
launch/: cartesian_controller.launch  instructions.ipynb  reemc_cartesian_controller.launch  reemc_cartesian_controller.rviz  reemc_gazebo.launch  reemc_slider.launch  reemc_slider.rviz  valkyrie_cartesian_controller.launch  valkyrie_slider.launch
opensot/: CMakeLists.txt
opensot/include/: IDProblem.h  IKProblem.h  OSProblem.h  simpleID_plugin.h  simpleIK_plugin.h  simpleOS_plugin.h
opensot/src/: IDProblem.cpp  IKProblem.cpp  OSProblem.cpp  simpleID_plugin.cpp  simpleIK_plugin.cpp  simpleOS_plugin.cpp
plugins/: CMakeLists.txt
plugins/GcompIO/: CMakeLists.txt  README.md
plugins/GcompIO/include/GcompIO/: GcompIO_io_plugin.h
plugins/GcompIO/src/: GcompIO_io_plugin.cpp
plugins/GcompPlugin/: CMakeLists.txt  README.md
plugins/GcompPlugin/include/GcompPlugin/: GcompPlugin_plugin.h
plugins/GcompPlugin/src/: GcompPlugin_plugin.cpp
plugins/SimpleHoming/: CMakeLists.txt  README.md
plugins/SimpleHoming/include/SimpleHoming/: SimpleHoming_plugin.h
plugins/SimpleHoming/src/: SimpleHoming_plugin.cpp
robots/: instructions.ipynb
robots/iCub/: iCub.gv  iCub.srdf  iCub.urdf  model.srdf  model.urdf
robots/reemc/: instructions.ipynb  reemc.gv  reemc.srdf  reemc.urdf
robots/reemc/meshes/arm/: arm_5.dae
robots/reemc/meshes/base/: base.dae  base_collision.stl
robots/reemc/meshes/head/: head_1.dae  head_1_collision.stl  head_2.dae  head_2_collision.stl
robots/reemc/meshes/leg/: leg_1.dae  leg_1_collision.stl  leg_3.dae  leg_3_collision.stl  leg_4.dae  leg_4_collision.stl  leg_6.dae
robots/reemc/meshes/sensors/xtion_pro_live/: xtion_pro_live.dae
robots/reemc/meshes/torso/: torso_2.dae  torso_2_collision.stl
robots/valkyrie/: valkyrie_sim_arm_mass_sims.srdf
robots/valkyrie/urdf/: forearm_left.urdf  forearm_right.urdf  imu_test.urdf  multisense_sl.urdf  test_bench.urdf  valkyrie_A.urdf  valkyrie_A_arm_mass_sims.urdf  valkyrie_B.urdf  valkyrie_B_arm_mass_sims.urdf  valkyrie_C.urdf  valkyrie_C_arm_mass_sims.urdf  valkyrie_D.urdf  valkyrie_D_arm_mass_sims.urdf  valkyrie_sim_arm_mass_sims.urdf
src/: generate_joint_map.cpp
